--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "express": "^4.17.3",
     "history": "^5.3.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.30.0",
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
